# Memory_Refreshing_Collection

BashCmd/: rename_downloaded_pages
BashCmd/cmake_commands/: cmakehelper  generate-MSVC-Debug.cmd
BashCmd/git_renaming/: cleanall  prepare  restore
BashCmd/tests/: awk_rule  awk_runner  cat_pipe_read  perl_shebang_test  print_x_from_path
Cpp/CalculatorInterpretator/: .gitignore  CMakeLists.txt  CalculatorInterpretator.sln
Cpp/CalculatorInterpretator/CalculatorInterpretator/: 1.txt  CalculatorInterpretator.vcxproj  CalculatorInterpretator.vcxproj.filters  driver.cpp  driver.h  error.cpp  error.h  input.h  lexxer.cpp  lexxer.h  main.cpp  parser.cpp  parser.h  parser_impl.h
Cpp/CrossLangDllImprot/: StackheapCrosslang.sln
Cpp/ForecsysVacancyTest/: CMakeLists.txt  input.txt  main.cpp
Cpp/GMockTestMinimal/: .gitignore  CMakeLists.txt  CMakeSettings.json  lib.cpp  test1.cpp
Cpp/InjectorDll/: InjectorDll.sln  readme.txt
Cpp/MatrixMultiMingw/: .gitignore  CMakeLists.txt  CMakeSettings.json  makefile  mydll.cpp  prog.cpp
Cpp/MatrixMultiMsvc/: .gitignore  makefile  mydll.cpp  prog.cpp
Cpp/MatrixMultiplicatorStructure/: .gitignore  CMakeLists.txt  CMakeSettings.json  zzzzCppProperties.json
Cpp/MatrixMultiplicatorStructure/src/MyDll/: CMakeLists.txt  mydll.cpp
Cpp/MatrixMultiplicatorStructure/src/Prog/: CMakeLists.txt  prog.cpp
Cpp/MatrixMultiplicatorStructure/src/QtGui/: CMakeLists.txt  Task.h  doW.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  runner.cpp  runner.h
Cpp/MemCpyTestAsm/: .gitignore  MemCpyTest.sln
Cpp/MoveForwardSemantics/: .gitignore  MoveForwardSemantics.sln
Cpp/NetHost/: NetHost.sln  readme.txt
Cpp/OpenGLGlfwTest/: CMakeLists.txt  fshader.fs  main.cpp  textured_cube.mtl  vshader.vs
Cpp/OpenMpTestBench/: .gitignore  main.cpp
Cpp/TicTacToeFullQml/: CMakeLists.txt
Cpp/TicTacToeQmlCpp/: .gitignore  CMakeLists.txt  CMakeSettings.json
Cpp/TicTacToeQmlCpp/src/: GameEngine.cpp  GameEngine.h  GameManager.cpp  GameManager.h  ImageButton.cpp  ImageButton.h  main.cpp  resources.qrc
Cpp/TicTacToeQmlCpp/src/js/: scripts.js
Cpp/TicTacToeQmlCpp/src/qml/: MyImage.qml  gui.qml
Cpp/TicTacToeQt5OpenGL/: .gitignore  CMakeLists.txt
Cpp/TicTacToeQt5OpenGL/resources/: resources.qrc
Cpp/TicTacToeQt5OpenGL/resources/shaders/: fshader.glsl  vshader.glsl
Cpp/TicTacToeQt5OpenGL/src/: FieldModel.cpp  FieldModel.h  FieldWidget.cpp  FieldWidget.h  GameEngine.cpp  GameEngine.h  GameWindow.cpp  GameWindow.h  Mesh.cpp  Mesh.h  Square.cpp  Square.h  main.cpp
Cpp/TicTacToeWidgets/: .gitignore  CMakeLists.txt  GameWindow.cpp  GameWindow.h  ImageButton.cpp  ImageButton.h  main.cpp  resources.qrc
Cpp/Trees/: CMakeLists.txt  main.cpp
Docker/AspNetCoreIIS/: Dockerfile
Docker/Nginx/: nginx.conf  run.bat  stop.bat
Docker/chromedocker/: Dockerfile
Docker/firefox/: Dockerfile
Docker/redis/: Dockerfile  docker-compose.yml
DotNet/AvaloniaTest/: AvaloniaTest.sln
DotNet/BenchmarkDotnet/: Program.cs
DotNet/CalculatorApp/: CalculatorApp.sln  SharedInfo.cs  VersionInfo.cs
DotNet/CertRequester/: Cert_requester.sln
DotNet/ClientServerTcp/: ClientServer.sln
DotNet/CompiledExpressions/: CompiledExpressions.sln
DotNet/CudafyTest/: CudafyTest2.sln
DotNet/DelayProxy/: DelayProxy.sln
DotNet/Dijkstra/: .gitignore  Dijkstra.sln  Program.cs
DotNet/DndBoard/: .editorconfig  DndBoard.sln
DotNet/DndBoardOld/: DndBoard.sln
DotNet/DndCharacterPlanner/: DndCharacterPlanner.sln  README.md
DotNet/EmbedApp/: EmbedApp.sln
DotNet/EncryptDecrypt/: EncryptDecrypt.sln  Program.cs
DotNet/GlobalKeyHook/: GlobalKeyHook.sln
DotNet/GoogleCalendarTest/: GoogleCalendarTest.csproj  GoogleCalendarTest.sln  Program.cs
DotNet/HttpClient/: Program.cs
DotNet/JavascriptDebugging/: .gitignore  JavascriptDebugging.sln
DotNet/LocksBench/: LockBench.sln
DotNet/MatrixMultiBench/: ParallelBenchmarking.sln
DotNet/MemBench/: MemBench.sln  Program.cs
DotNet/Misc/: AppsettingsDepInj.cs  Bitmaps.cs  EncodeDecodePixelsArray.cs  ExchangeServiceSubscription.cs  TLSEnforcement_CertValidation.cs  zipping.cs
DotNet/MnistReader/: MnistReader.sln
DotNet/NeuralNetworkCsharp/: NeuralNetwork.sln
DotNet/OpenXml/: OpenXml.cs
DotNet/ProxyServer/: .gitignore  ProxyServer.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
DotNet/QRCopyPaste/: LICENSE  QRCopyPaste.sln  README.md  publish_3.1_framework-dependant.bat  publish_3.1_self-contained_win-x64.bat  publish_desktop_3.1_framework-dependant.bat  publish_desktop_3.1_self-contained_win-x64.bat
DotNet/QRSenderLoader/: QRCodeLoader.sln  QRCodeSender.sln
DotNet/QRXamarinTest/: QRXamarinTest.sln
DotNet/QueueSystem/: WowQueueCSharp.sln
DotNet/RemoteWinShell/: RemoteWinShell.sln
DotNet/TelegramBotUpdates/: Program.cs  TelegramBotTest.csproj  TelegramBotTest.sln
DotNet/TicTacToeWPFMinimal/: TicTacToe.sln
DotNet/TicTacToeWeb/: TicTacToe.sln
DotNet/WCFCustomWsdlType/: Data.cs  SomeOtherCopypasteExample1.cs  SomeOtherCopypasteExample2.cs
DotNet/WCFStreamFiles/: ClientExample.cs  readme.txt  rest_example.cs
DotNet/WebService_BasicAuth/: WebService_BasicAuth.sln
Javascript/: TimeZones.js  css_parsing.js  misc_helpers.js  postRequest.html
Javascript/DndCharPlannerClientPart/: package.json
Javascript/TicTacToeWebClientPart/: .gitignore  package-lock.json
Misc/: DirSizes.txt  GItLocalSSH.txt  dualboot-hyperv.txt  md5PS.txt  netsh_portproxy.txt
Misc/EnablingEnhancedSessionUbuntu2004/: cmds.txt
Misc/HyperV_Linux_EnhSession/: EnablingEnhancedSessionUbuntu1804.sh
Misc/cert/: .gitignore  CreateClientCert.bat  CreateRootCert.bat  CreateServerCert.bat  commands.txt  configClient.txt
Powershell/: UploadSupply.bat  UploadSupply.ps1  test_supply_sync.json
Python/FIAS/: commands.txt  create_import_fias_table.sql  delete_duplicates.sql  fias_test.xml  fias_test_filtered1.xml  filter_and_split_fias_xml.c  import_fias_to_db.py  (+7 more)
SQL/: AuditTrigger.sql  BulkInsert_TryCatch.sql  CrossServerCopy.sql  JobsCreation.sql  SearchAllTables.sql  import_xml.sql  snapshotsSQL.sql  sql_locks.sql
(+2327 files in other folders)
